--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load comic_tags %}
+
 {% block title %}Adventures of Hate and NuT | Latest Webcomic{% endblock %}
 
 {% block body_class %}home {% if latest_comic.single_row %}single-row-comic-page {% endif %}{% endblock %}
@@ -46,27 +48,11 @@
 		<img src="{{ latest_comic.comic_image.url }}" class="comic" alt="Comic entitled '{{ latest_comic.title }}'" />
 	{% endif %}
 
-	{% with latest_comic as comic %}
-		<footer class="comic-footer clearfix">
-			<p class="comic-date">{{ comic.date|date }}</p>
-
-			{% if comic.inside_arc %}
-				<p class="story-arc-from-beginning">You are reading the "{{ comic.story_arc.name }}" story arc. <a href="{{ comic.story_arc.get_absolute_url }}">Read it from the beginning.</a></p>
-			{% endif %}
-
-			{% if comic.continuation_of %}
-				<p class="continuation-of">This comic is a continuation of <a href="{{ comic.continuation_of.get_absolute_url }}">{{ comic.continuation_of.title }} (#{{ comic.continuation_of.chronology }})</a></p>
-			{% endif %}
-			
-			{% if not comic.single_row %}
-				<div id="FotomotoToolbar" class="FotomotoToolbarClass"></div>
-			{% endif %}
-			
-			{% include "social/comic_share_buttons.html" %}
-			
-			<p class="hidden" itemprop="datePublished">{{ comic.date|date:"Y-m-d" }}</p>
-		</footer>
-	{% endwith %}
+	
+	<footer class="comic-footer clearfix">
+		{% render_comic_footer latest_comic next_comic previous_comic %}
+	</footer>
+	
 {% endblock %}
 
 
