--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -64,6 +64,12 @@
 		margin:0;
 		font-size:1.8em;
 	}
+	.comic-footer-nav .comic-nav-list-item{
+		font-size:1.5em;
+	}
+	.comic-footer-nav .comic-nav-list-item i{
+		vertical-align: middle;
+	}
 	.pg-wrap{
 		border-top:solid 1px #a02123;
 	}
@@ -213,9 +219,7 @@
 	.FotomotoToolbarClass{
 		display:block;
 	}
-	.share{
-		margin:1em 0 0;
-	}
+	
 
 	.in-content-ad-wrap{
 		float:right;
@@ -235,6 +239,10 @@
 	}
 	.pg-foot{
 		margin:0 0 1em;
+	}
+	
+	comic-footer{
+		margin:1.5em 0 1em;
 	}
 }
 
@@ -328,9 +336,10 @@
 		margin:0;
 	}
 	.foot-section{
-		
 		width:34%;
-		
+	}
+	.comic-footer-nav-word{
+		display:inline-block;
 	}
 	
 }
