--- a/assets/themes/hancom/templates/comics/archive_index.html
+++ b/assets/themes/hancom/templates/comics/archive_index.html
@@ -40,6 +40,7 @@
 	<section class="comic-archive-content">
 		{% for archive in archives %}
 			{% if not forloop.first %}
+				{% cycle '<div class="clearfix">' '' '' %}
 					<div class="comic-archive-list">
 						<h2>{{ archive|date:"F Y" }}</h2>
 						<ul class="">
@@ -50,7 +51,9 @@
 							{% endfor %}
 						</ul>
 					</div>
-				
+				{% if forloop.counter|add:"-1"|divisibleby:"3" or forloop.last %}
+					</div>
+				{% endif %}
 			{% endif %}
 		{% endfor %}
 	</section>	
