--- a/assets/themes/hancom/static/css/404.css
+++ b/assets/themes/hancom/static/css/404.css
@@ -1,9 +1,5 @@
-.nopg .content{
-	background:none;
-	padding:0;
-	border-radius:0;
-	border:none;
-	margin:0;
+.nopg .pg{
+	overflow:hidden;
 }
 .nopg .s{
 	margin:-40px 0 0;
