just a little more style fiddling

--- a/assets/themes/hancom/static/css/404.css
+++ b/assets/themes/hancom/static/css/404.css
@@ -1,9 +1,13 @@
 .nopg .pg{
 	overflow:hidden;
+
 }
 .nopg .s{
 	margin:-40px 0 0;
 }
 .nopg .pg{
 	margin:0;
+}
+.nopg .content{
+	background:none;
 }
