--- a/assets/themes/hancom/static/css/characters.css
+++ b/assets/themes/hancom/static/css/characters.css
@@ -5,16 +5,18 @@
 }
 .character-list-item{
 	margin:0 0 1.3em;
-	padding:0;
+	padding:5px;
 	position:relative;
+	background:#fefefe;
 }
 .character-name{
 	font-size:1.7em;
 }
 .character-image{
-	margin:0 -10px;
+	margin:0 -5%;
 	max-width:none;
 	width:110%;
+	box-shadow:0px 2px 5px rgba(0,0,0,.2);
 }
 .character-description{
 	margin:.5em 0 0;
