--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -145,7 +145,7 @@
 		border-radius:8px;
 	}
 	.character-description{
-		margin:4.5em 0 0;
+		margin:4.5em 0 0 39%;
 	}
 	#foot-1:target,
 	#foot-1:target a,
