--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -138,7 +138,7 @@
 	.character-image{
 		width:30%;
 		float:left;
-		margin:0 5% 1em 0;
+		margin:0;
 		border:solid 8px #531112;
 		padding:1%;
 		background:#fff;
