assigning 'r' key to random link

--- a/assets/themes/hancom/templates/comics/render/comic_footer.html
+++ b/assets/themes/hancom/templates/comics/render/comic_footer.html
@@ -48,7 +48,7 @@
 			</li>
 
 			<li class="comic-nav-list-item comic-nav-list-item-random">
-				<a title="Read a random comic" data-currentchronology="{{ comic.chronology }}" class="comic-nav-list-item-link" href="{{ comic|get_random_comic_link }}"><span class="comic-footer-nav-word">Random</span><i class="icon-random"></i></a>
+				<a id="randomComic" title="Read a random comic" data-currentchronology="{{ comic.chronology }}" class="comic-nav-list-item-link" href="{{ comic|get_random_comic_link }}"><span class="comic-footer-nav-word">Random</span><i class="icon-random"></i></a>
 			</li>
 			
 			<li class="comic-nav-list-item comic-nav-list-item-right">
