Totally missed a few meta tags when i did an overhaul quite a while ago..

--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -34,7 +34,7 @@
 		<header class="pg-head-wrap clearfix">
 			<div class="width">
 				<div class="pg-head" id="pgHead">
-					<a href="{% url "home" %}"><img id="siteLogo" class="logo" title="A webcomic about a couple of rutheless killers, set in the world of Ultima Online." src="{% static "img/adv_hateandnut.png" %}" alt="Hate and Nut Logo" /></a>
+					<a href="{% url "home" %}"><img id="siteLogo" class="logo" title="A lighthearted webcomic comedy about the adventures of couple of ruthless killers - Hate and NuT - along with a colorful cast of other characters, set in a dangerous fantasy world." src="{% static "img/adv_hateandnut.png" %}" alt="Hate and Nut Logo" /></a>
 				</div>
 			</div>
 		</header>
