--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -14,7 +14,7 @@
 	
 	<meta property="og:title" content="Adventures of Hate and NuT" />
 	<meta property="og:image" content="{{ SITE_URL }}{% static "img/OG_image_home.jpg" %}" /> 
-	<meta property="og:description" content="A webcomic about a couple of rutheless killers, set in the world of Ultima Online." /> 
+	<meta property="og:description" content="A lighthearted webcomic comedy about the adventures of couple of ruthless killers - Hate and NuT - along with a colorful cast of other characters, set in a dangerous fantasy world." /> 
 {% endblock %}
 
 {% block content %}
