--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -6,16 +6,16 @@
 		<meta name="description" content="{% block meta_description %}A lighthearted webcomic comedy about the adventures of couple of ruthless killers - Hate and NuT - along with a colorful cast of other characters, set in a dangerous fantasy world.{% endblock %}" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="apple-mobile-web-app-title" content="Hate and NuT" />
-		
+
 		<link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png" />
 
 		<title>{% block title %}| {{ SITE_NAME }}{% endblock %}</title>
 
 		{% add_static "css" %}
-		
+
 		{% block extra_head %}{% endblock %}
 
-		<script type="text/javascript">window.google_analytics_uacct = "UA-19357683-2";</script>		
+		<script type="text/javascript">window.google_analytics_uacct = "UA-19357683-2";</script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -25,11 +25,11 @@
 			ga('create', 'UA-19357683-2', 'hateandnut.com');
 			ga('send', 'pageview');
 		</script>
-		
+
 		<script src="{% static "js/nocache/modernizr.js" %}"></script>
 
 	</head>
-	
+
 	<body class="{% block body_class %}{% endblock %}">
 		<header class="pg-head-wrap clearfix">
 			<div class="width">
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 		</header>
-		
+
 		<div class="pg-wrap">
 			<div class="width">
 				<div class="pg clearfix">
@@ -50,15 +50,15 @@
 							<ul class="social">
 								<li><a title="Subscribe via RSS" class="social-icon social-rss" href="{{ SITE_META.RSS }}"><span class="visuallyhidden">RSS Feed</span></a></li>
 								<li><a title="Follow me on Twitter" class="social-icon social-twitter" href="{{ SITE_META.TWITTER }}"><span class="visuallyhidden">Follow me on Twitter</span></a></li>
-							</ul>						
+							</ul>
 						</div>
 					{% endblock %}
 				</div>
 			</div>
 		</div>
-		
+
 		<footer class="pg-foot-wrap clearfix">
-			
+
 			<div class="clearfix pg-foot">
 				{% block footer_content %}
 					<nav class="foot-section clearfix">
@@ -66,7 +66,7 @@
 						<ul>
 							<li><a href="{% url "archive_index" %}">Archive</a></li>
 							<li><a href="{% url "characters_index" %}">Characters</a></li>
-							
+
 							<li><a href="{% url "become_a_sponsor" %}">Become a Sponsor</a></li>
 							<li><a href="{% url "contact_me" %}">Contact me</a></li>
 						</ul>
@@ -79,6 +79,18 @@
 							<li><a href="{{ SITE_META.TWITTER }}">Twitter</a></li>
 						</ul>
 					</nav>
+					<aside class="foot-shortcuts foot-section">
+						<h2><span class="underlined-heading">Shortcuts</span></h2>
+						<dl>
+							<dt><kbd>a</kbd></dt>
+							<dd>Previous Comic</dd>
+							<dt><kbd>s</kbd></dt>
+							<dd>Next Comic</dd>
+							<dt><kbd>r</kbd></dt>
+							<dd>Random Comic</dd>
+						</dl>
+
+					</aside>
 				{% endblock %}
 			</div>
 
@@ -88,7 +100,7 @@
 			</ul>
 
 			<p class="footer-text">&copy; 2013 Hate and NuT<br/>Webcomic by <span itemscope itemtype="http://data-vocabulary.org/Person"><a itemprop="url" title="Brant Steen Web Design" href="http://brantsteen.com"><span itemprop="name">Brant Steen</span></a></span></p>
-			
+
 		</footer>
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
