--- a/assets/themes/hancom/templates/base.html
+++ b/assets/themes/hancom/templates/base.html
@@ -80,7 +80,7 @@
 						</ul>
 					</nav>
 					<aside class="foot-shortcuts foot-section">
-						<h2><span class="underlined-heading">Shortcuts</span></h2>
+						<h2><span class="underlined-heading">Shortcut Keys</span></h2>
 						<dl>
 							<dt><kbd>a</kbd></dt>
 							<dd>Previous Comic</dd>
