campaign tails for social share buttons

--- a/assets/themes/hancom/templates/social/comic_share_buttons.html
+++ b/assets/themes/hancom/templates/social/comic_share_buttons.html
@@ -1,27 +1,27 @@
 <ul class="share clearfix">
 	<li class="share-twitter">
-		<a href="https://twitter.com/share" 
-		class="twitter-share-button" 
-		data-text="Hate and NuT #{{ comic.chronology }} - {{ comic.title }}" 
-		data-url="{{ SITE_URL }}{{ comic.get_absolute_url }}" 
-		data-size="large" 
-		data-related="brantsteen" 
+		<a href="https://twitter.com/share"
+		class="twitter-share-button"
+		data-text="Hate and NuT #{{ comic.chronology }} - {{ comic.title }}"
+		data-url="{{ SITE_URL }}{{ comic.get_absolute_url }}?utm_source=website-social-buttons&utm_medium=social-share&utm_content=comic-footer-buttons&utm_campaign=twitter"
+		data-size="large"
+		data-related="brantsteen"
 		data-count="none" >Tweet</a>
 	</li>
-	
+
 	<li class="share-plus">
 		<!-- Place this tag where you want the +1 button to render. -->
-		<div class="g-plusone" 
-		data-annotation="none" 
-		data-href="{{ SITE_URL }}{{ comic.get_absolute_url }}"></div>		
+		<div class="g-plusone"
+		data-annotation="none"
+		data-href="{{ SITE_URL }}{{ comic.get_absolute_url }}?utm_source=website-social-buttons&utm_medium=social-share&utm_content=comic-footer-buttons&utm_campaign=g-plus"></div>
 	</li>
 
 	<li class="share-facebook">
-		<div class="fb-like" 
-		data-href="{{ SITE_URL }}{{ comic.get_absolute_url}}" 
+		<div class="fb-like"
+		data-href="{{ SITE_URL }}{{ comic.get_absolute_url}}?utm_source=website-social-buttons&utm_medium=social-share&utm_content=comic-footer-buttons&utm_campaign=facebook"
 		data-ref="fblk_{{ comic.chronology }}"
 		data-send="false"
-		data-width="300" 
+		data-width="300"
 		data-show-faces="true"></div>
 	</li>
 </ul>
