--- a/assets/themes/hancom/templates/comics/comic_page.html
+++ b/assets/themes/hancom/templates/comics/comic_page.html
@@ -6,18 +6,18 @@
 {% block meta_description %}{{ comic.description }}{% if comic.story_arc %} - Part of the '{{ comic.story_arc }}' story arc.{% endif %} Hate and NuT Webcomic issue #{{ comic.chronology }}{% endblock %}
 
 {% block extra_head %}
-	
+
 	{% if previous_comic %}
 		<link rel="prefetch" href="{{ previous_comic.get_absolute_url }}" />
 	{% else %}
 		{% if next_comic %}
 			<link rel="prefetch" href="{{ next_comic.get_absolute_url }}" />
-		{% endif %}	
+		{% endif %}
 	{% endif %}
 
 	<meta property="og:title" content="Hate and NuT #{{ comic.chronology }} - {{ comic.title }}" />
-	<meta property="og:image" content="{{ SITE_URL }}{{ comic.preview_image_half.url }}" /> 
-	<meta property="og:description" content="Hate and NuT #{{ comic.chronology }} - {{ comic.description }}{% if comic.story_arc %} - Part of the '{{ comic.story_arc }}' story arc.{% endif %}" /> 
+	<meta property="og:image" content="{{ SITE_URL }}{{ comic.preview_image_half.url }}" />
+	<meta property="og:description" content="Hate and NuT #{{ comic.chronology }} - {{ comic.description }}{% if comic.story_arc %} - Part of the '{{ comic.story_arc }}' story arc.{% endif %}" />
 {% endblock %}
 
 {% block title %}{{ comic.title }} {{ block.super }} | {% if comic.story_arc and comic.special_story_arc_title %}{{ comic.special_story_arc_title }}{% else %}Webcomic #{{ comic.chronology }}{% endif %}{% endblock %}
@@ -26,17 +26,21 @@
 
 {% block content %}
 	<header class="clearfix heading-wrap">
-		{% if comic.is_available_to_public %}
-			{% if comic.story_arc and comic.special_story_arc_title %}
-				<h1>{{ comic.special_story_arc_title }}</h1>
+		<hgroup class="story-arc-comic-heading-group">
+			<h1 itemprop="name">{{ comic.title }}</h1>
+
+			{% if comic.is_available_to_public %}
+				{% if comic.story_arc and comic.special_story_arc_title %}
+					<h2>{{ comic.special_story_arc_title }}</h2>
+				{% else %}
+					<h2>Hate and Nut #{{ comic.chronology }}</h2>
+				{% endif %}
 			{% else %}
-				<h1 itemprop="name">Hate and Nut #{{ comic.chronology }}</h1>
+				<h2 class="error">NOT PUBLIC YET (#{{ comic.chronology }})</h1>
 			{% endif %}
-			
-		{% else %}
-			<h1 class="error">NOT PUBLIC YET (#{{ comic.chronology }})</h1>
-		{% endif %}
-		
+
+		</hgroup>
+
 		<nav class="comic-nav">
 			<ul class="comic-nav-list">
 				<li class="comic-nav-list-item comic-nav-list-item-left">
@@ -52,7 +56,7 @@
 						{% endwith %}
 					{% endif %}
 				</li>
-				
+
 				<li class="comic-nav-list-item comic-nav-list-item-right">
 					{% if comic.is_available_to_public %}
 						{% if next_comic %}
@@ -69,7 +73,7 @@
 			</ul>
 		</nav>
 	</header>
-	
+
 	{% if comic.single_row %}
 		<div class="comic-wide">
 			<img src="{{ comic.comic_image.url }}" class="comic" alt="Webcomic #{{ comic.chronology }} entitled '{{ comic.title }}'"  itemprop="image" />
@@ -77,7 +81,7 @@
 	{% else %}
 		<img src="{{ comic.comic_image.url }}" class="comic" alt="Webcomic #{{ comic.chronology }} entitled '{{ comic.title }}'"  itemprop="image" />
 	{% endif %}
-	
+
 	<footer class="comic-footer clearfix">
 		{% render_comic_footer comic next_comic previous_comic %}
 	</footer>
