hooray for inconsistent variable names in templates!

--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -24,7 +24,7 @@
 			{% if latest_comic.story_arc and latest_comic.special_story_arc_title %}
 				<h2>{{ latest_comic.special_story_arc_title }}</h2>
 			{% else %}
-				<h2>Hate and Nut #{{ comic.chronology }}</h2>
+				<h2>Hate and Nut #{{ latest_comic.chronology }}</h2>
 			{% endif %}
 		</hgroup>
 
